# playroom-rgbctl

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: commands.rs  console.rs  consoleio.rs  context.rs  imu.rs  lib.rs  main.rs  mic.rs  rgbcontroller.rs  rotary_encoder.rs
src/modes/: audio.rs  dial.rs  manager.rs  mod.rs  shake.rs  tilt.rs
