[package]
name = "playroom-rgbctl"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
numtoa = "0.2.4"
panic-halt = "0.2.0"
panic-probe = { version = "0.2", features = [ "print-rtt" ] }
stm32f4xx-hal = { version = "0.17.1", features = ["stm32f411"] }
vek = { version = "0.16.1", default-features = false, features = ["libm"] }

[profile.dev]
debug = 1

[profile.release]
debug = 1

